Add interfaces. Divide Northwind.CurrencyServices. Inject dependencies. Add documentation.

--- a/Northwind.ReportingServices.OData/Northwind.ReportingServices.OData.csproj
+++ b/Northwind.ReportingServices.OData/Northwind.ReportingServices.OData.csproj
@@ -27,7 +27,9 @@
     <PackageReference Include="System.Spatial" Version="5.8.4" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Northwind.CurrencyServices\Northwind.CurrencyServices.csproj" />
+    <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
+    <ProjectReference Include="..\Northwind.CurrencyServices.CountryCurrency\Northwind.CurrencyServices.CountryCurrency.csproj" />
+    <ProjectReference Include="..\Northwind.CurrencyServices.CurrencyExchange\Northwind.CurrencyServices.CurrencyExchange.csproj" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services" />
