--- a/ReportingApp/ReportingApp.csproj
+++ b/ReportingApp/ReportingApp.csproj
@@ -24,6 +24,8 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Northwind.CurrencyServices.CountryCurrency\Northwind.CurrencyServices.CountryCurrency.csproj" />
+    <ProjectReference Include="..\Northwind.CurrencyServices.CurrencyExchange\Northwind.CurrencyServices.CurrencyExchange.csproj" />
     <ProjectReference Include="..\Northwind.ReportingServices.OData\Northwind.ReportingServices.OData.csproj" />
   </ItemGroup>
 </Project>
