--- a/Northwind.CurrencyServices.CountryCurrency/Northwind.CurrencyServices.CountryCurrency.csproj
+++ b/Northwind.CurrencyServices.CountryCurrency/Northwind.CurrencyServices.CountryCurrency.csproj
@@ -8,8 +8,12 @@
         <GenerateDocumentationFile>false</GenerateDocumentationFile>
     </PropertyGroup>
     <ItemGroup>
+      <None Remove=".editorconfig" />
+    </ItemGroup>
+    <ItemGroup>
         <AdditionalFiles Include="..\code-analysis.ruleset" Link="Properties\code-analysis.ruleset" />
         <AdditionalFiles Include="..\stylecop.json" Link="Properties\stylecop.json" />
+        <AdditionalFiles Include=".editorconfig" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
@@ -21,6 +25,9 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+    </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
     </ItemGroup>
 
 </Project>
