Add dependency resolver.

--- a/ReportingApp/ReportingApp.csproj
+++ b/ReportingApp/ReportingApp.csproj
@@ -17,15 +17,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Northwind.CurrencyServices.CountryCurrency\Northwind.CurrencyServices.CountryCurrency.csproj" />
-    <ProjectReference Include="..\Northwind.CurrencyServices.CurrencyExchange\Northwind.CurrencyServices.CurrencyExchange.csproj" />
-    <ProjectReference Include="..\Northwind.ReportingServices.OData\Northwind.ReportingServices.OData.csproj" />
+    <ProjectReference Include="..\DependencyResolver\DependencyResolver.csproj" />
   </ItemGroup>
 </Project>
