--- a/ReportingApp/appsettings.json
+++ b/ReportingApp/appsettings.json
@@ -1,3 +1,4 @@
 {
   "AccessKey": "bcd68bba8a7ad1fa61b36ea9b6e09036",
+  "NorthwindServiceUrl": "https://services.odata.org/V3/Northwind/Northwind.svc"
 }
