--- a/ReportingApp/appsettings.json
+++ b/ReportingApp/appsettings.json
@@ -1,4 +1,8 @@
 {
   "AccessKey": "bcd68bba8a7ad1fa61b36ea9b6e09036",
-  "NorthwindServiceUrl": "https://services.odata.org/V3/Northwind/Northwind.svc"
+  "NorthwindServiceUrl": "https://services.odata.org/V3/Northwind/Northwind.svc",
+
+  "ConnectionStrings": {
+    "SqlConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=Northwind;Integrated Security=True"
+  }
 }
