Copy appsettings.json to output directory.

--- a/ReportingApp/ReportingApp.csproj
+++ b/ReportingApp/ReportingApp.csproj
@@ -25,4 +25,9 @@
   <ItemGroup>
     <ProjectReference Include="..\DependencyResolver\DependencyResolver.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
